infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grappl
  labels:
    app: grappl
    env: local
