infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grappl-ingress
  namespace: grappl
  labels:
    app.kubernetes.io/part-of: grappl
spec:
  rules:
    - host: grappl.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80
